<resources>
    <string name="app_name">Tubes Android</string>
    <string name="action_settings">Settings</string>
    <string name="Search">Search</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login Here</string>
    <string name="signup">Dont Have Account? Sign up Here</string>
    <string name="reg">Register and Sign in</string>
    <string name="Register">Register</string>
    <string name="signin">Already Have Account? Login Here</string>
    <string name="nama">Teacher Name  : </string>
    <string name="mapel">Subject Name : </string>
    <string name="tarif">Cost : </string>
    <string name="status">Status : </string>
    <string name="chat">Chat</string>
    <string name="phone">Phone</string>
    <string name="list">Teacher Lists</string>
    <string name="edu">Education  : </string>
    <string name="prestasi">Achievement : </string>
    <string name="exper">Experience : </string>
    <string name="desk">Teacher description : </string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
