<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailGuru">
    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/appbarlayout_id">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsetoolbar"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="@string/list"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:padding="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/loading"
                    android:id="@+id/aa_thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="151dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/aa_rowname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/aa_pendidikan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edu" />
                    <TextView
                        android:id="@+id/aa_namamapel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/mapel" />
                    <TextView
                        android:id="@+id/aa_prestasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/prestasi" />
                    <TextView
                        android:id="@+id/aa_pengalaman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/exper" />
                </LinearLayout>
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/desk"
            android:id="@+id/tentordeskripsi"/>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>